[np-48420] fix: Add missing validation check (#430)
* fix: Add missing access rights check to endpoint

* refactor: Use common util methods